modified:   app.py 	modified:   identify.py 	modified:   templates/login.html

--- a/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
 LastDrive=C:
-LastDirectory=\implant detection\pythonflaskhtmlsqlite\SQLiteDatabaseBrowserPortable
+LastDirectory=\Users\shahad\Desktop\DENTXdeep\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=C:\implant detection
+PAL:LastPortableAppsBaseDir=C:\Users\shahad\Desktop
